			SWI-Prolog ChangeLog
			====================

  * ADDED: Guitracer: provide editable write-options to detailed term-view.
    Suggested by Wouter Jansweijer.

  * FIXED: backtracking foreign predicates using integer handles (between/3).

  * FIXED: toldString() didn't unlock current output, notably causing
    warnings from background threads to lock I/O.  Sergey Tikhonov.

  * FIXED/MODIFIED: mutex-locking stragety for I/O after comments from
    Sergey Tikhonov.  Thanks

  * ADDED: non-buffering user_error stream with interactor/0 on Unix/X11.

  * FIXED: stack and detached option parsing in thread_create/3.

  * PORT: Windows, plld.exe: Add /MD to flags and /GX when compiling C++.
    Use libpl.lib, even for the MT version.  SWI-cpp.h: deal with MSVC
    if it fails to recognise throw doesn't return.

  * FIXED: error message for illegal export list (Holger Kanwischer).

  * PORT: Check for -lexc on Tru64/DUnix when compiling for multi-threading
    (Sergey Tikhonov).

  * FIXED: make qsave work if predicates from library(lists) are
    redefined (Sergey Tikhonov).

  * FIXED: Scanning resource-file without using mmap().  (Sergey Tikhonov).

  * FIXED: Detection of mmap() for regular files (Sergey Tikhonov).

  * FIXED: Avoid calling flatten from library(lists) in toplevel.pl.
    Wouter Jansweijer.

  * FIXED: PL_open_query() on auto-loaded procedures cause data corruption.

  * FIXED: IOSTREAM Locking problem in set_stream/2.

  * FIXED: Extranous unlock in format/[2,3].  Diagnosed by Sergey Tikhonov.

  * FIXED: Proper handling of pthread error codes.

  * FIXED: listing/1 and friends (bug due to moving list predicates).
    Anjo Anjewierden.

  * ADDED: thread_statistics/3: get statistics on other threads.

  * PORT: MacOS X: check for both plain symbol and _symbol on
    call_shared_object_function/2 to deal with different versions of
    the dlcompat library.

  * FIXED: Preserve exceptions in GUI tracer (notably abort).  Kanwischer
    Holger.
